--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -22,6 +22,7 @@ body {
 }
 #todo-list .editing label {
   display: none; /* Hides label text when .editing*/
+  font-size: 15px;
 }
 #todo-list .editing input.edit {
   display: inline; /* Shows input text box when .editing*/
